2007-10-16  Bob Wilson  <bob.wilson@acm.org>

	* doc/binutils.texi (objcopy, strip): Replace hyphens with em-dashes.
	(objdump, strip, c++filt): Correct punctuation for "e.g." and "i.e."
	and change to spell out "for example" in two places.

2007-10-16  Nick Clifton  <nickc@redhat.com>

	* configure.in: Build windows tools for --enable-targets=all.
	* configure: Regenerate.

2007-10-15  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (print_line): Check fwrite return value.
	* srconv.c (checksum, wr_tr, wr_cs): Likewise.
	* sysdump.c (fillup): Return zero on getc or fread EOF.  Return count
	read.

2007-10-10  Jim Blandy  <jimb@codesourcery.com>

	* dwarf.c (process_debug_info): Line up section offsets of
	attribute values with those of dies.
	(read_and_display_attr): Reduce spacing here.

	* dwarf.c (display_debug_lines): Print the offset of each line
	number program header.

2007-10-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4476
	* readelf.c (print_dynamic_symbol): New.
	(process_symbol_table): Handle DT_GNU_HASH for dynamic symbols.

2007-10-08  Carlos O'Donell  <carlos@codesourcery.com>

	* resrc.c (read_rc_file): Rename e to edit, and c to dir.
	Pass dir to windres_add_include_dir.  Add comments.
	(close_input_stream): Check pclose error, and call fatal if
	the preprocessor failed.
	* windres.c (windres_add_include_dir): Assert that p is non-NULL,
	and not an empty string. 

2007-10-04  Nick Clifton  <nickc@redhat.com>

	PR binutils/5098
	* dlltool.c: Fix spelling typos.

2007-10-03  Masaki Muranaka  <monaka@monami-software.com>

	* readelf.c (dump_section_as_strings): Use %6tx instead of %6zx.

2007-09-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* MAINTAINERS: Fix typo.

2007-09-17  Shen Feng  <shen@cn.fujitsu.com>

	* readelf.c (do_archive_index): New.
	(options): Add -c and --archive-index option.
	(usage): Add -c option.
	(parse_args): Add c option parsing.
	(process_archive): Dump archive index.
	* NEWS: Mention the new feature.